Still trying to fix border radius on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ form {
 input {
     display: block;
     min-width: 18.75rem;
-    border-radius: 0;
+    appearance: none;
 }
 
 h5 {
